// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adapter can fetch bed with header 1`] = `
[
  {
    "description": undefined,
    "end": 3009,
    "refName": "contigA",
    "score": undefined,
    "start": 3000,
    "strand": 0,
    "subfeatures": [],
    "type": undefined,
    "uniqueId": "test-163099",
  },
  {
    "description": undefined,
    "end": 3114,
    "refName": "contigA",
    "score": undefined,
    "start": 3105,
    "strand": 0,
    "subfeatures": [],
    "type": undefined,
    "uniqueId": "test-163117",
  },
  {
    "description": undefined,
    "end": 3161,
    "refName": "contigA",
    "score": undefined,
    "start": 3152,
    "strand": 0,
    "subfeatures": [],
    "type": undefined,
    "uniqueId": "test-163135",
  },
  {
    "description": undefined,
    "end": 3180,
    "refName": "contigA",
    "score": undefined,
    "start": 3171,
    "strand": 0,
    "subfeatures": [],
    "type": undefined,
    "uniqueId": "test-163153",
  },
  {
    "description": undefined,
    "end": 3183,
    "refName": "contigA",
    "score": undefined,
    "start": 3174,
    "strand": 0,
    "subfeatures": [],
    "type": undefined,
    "uniqueId": "test-163171",
  },
  {
    "description": undefined,
    "end": 3222,
    "refName": "contigA",
    "score": undefined,
    "start": 3213,
    "strand": 0,
    "subfeatures": [],
    "type": undefined,
    "uniqueId": "test-163189",
  },
  {
    "description": undefined,
    "end": 3474,
    "refName": "contigA",
    "score": undefined,
    "start": 3465,
    "strand": 0,
    "subfeatures": [],
    "type": undefined,
    "uniqueId": "test-163207",
  },
  {
    "description": undefined,
    "end": 3804,
    "refName": "contigA",
    "score": undefined,
    "start": 3795,
    "strand": 0,
    "subfeatures": [],
    "type": undefined,
    "uniqueId": "test-163225",
  },
  {
    "description": undefined,
    "end": 4044,
    "refName": "contigA",
    "score": undefined,
    "start": 4035,
    "strand": 0,
    "subfeatures": [],
    "type": undefined,
    "uniqueId": "test-163243",
  },
  {
    "description": undefined,
    "end": 4082,
    "refName": "contigA",
    "score": undefined,
    "start": 4073,
    "strand": 0,
    "subfeatures": [],
    "type": undefined,
    "uniqueId": "test-163261",
  },
]
`;

exports[`adapter can fetch features bed with autosql 1`] = `
[
  {
    "Entrez_Gene_Id": "2782",
    "Hugo_Symbol": "GNB1",
    "Matched_Norm_Sample_Barcode": "TCGA-OR-A5KB-11A-11D-A30A-10",
    "Reference_Allele": "T",
    "Tumor_Sample_Barcode": "TCGA-OR-A5KB-01A-11D-A30A-10",
    "Tumor_Seq_Allele1": "T",
    "Tumor_Seq_Allele2": "G",
    "Variant_Classification": "Splice_Region",
    "Variant_Type": "SNP",
    "alcohol_history": "--",
    "alcohol_intensity": "--",
    "blockCount": 1,
    "blockSizes": [
      1,
    ],
    "bmi": "--",
    "case_id": "09454ed6-64bc-4a35-af44-7c4344623d45",
    "chromStarts": [
      0,
    ],
    "cigarettes_per_day": "--",
    "days_to_death": "--",
    "dbSNP_RS": "novel",
    "dbSNP_Val_Status": "",
    "description": undefined,
    "end": 10,
    "ethnicity": "not hispanic or latino",
    "freq": "0.0108695652174",
    "gender": "female",
    "height": "--",
    "name": "T>G",
    "project_id": "TCGA-ACC",
    "refName": "ctgA",
    "reserved": "0,0,0",
    "sampleCount": "1",
    "score": 1,
    "start": 1,
    "strand": 0,
    "subfeatures": [
      {
        "end": 2,
        "parentId": "test-52986",
        "refName": "ctgA",
        "start": 1,
        "strand": 0,
        "type": "block",
        "uniqueId": "test-52986-0",
      },
    ],
    "thickEnd": 1815757,
    "thickStart": 1815756,
    "type": undefined,
    "uniqueId": "test-52986",
    "weight": "--",
    "years_smoked": "--",
  },
]
`;

exports[`adapter can fetch features from volvox.sort.bed.gz simple bed3 1`] = `
[
  {
    "description": undefined,
    "end": 3009,
    "refName": "contigA",
    "score": undefined,
    "start": 3000,
    "strand": 0,
    "subfeatures": [],
    "type": undefined,
    "uniqueId": "test-155163",
  },
  {
    "description": undefined,
    "end": 3114,
    "refName": "contigA",
    "score": undefined,
    "start": 3105,
    "strand": 0,
    "subfeatures": [],
    "type": undefined,
    "uniqueId": "test-155181",
  },
  {
    "description": undefined,
    "end": 3161,
    "refName": "contigA",
    "score": undefined,
    "start": 3152,
    "strand": 0,
    "subfeatures": [],
    "type": undefined,
    "uniqueId": "test-155199",
  },
  {
    "description": undefined,
    "end": 3180,
    "refName": "contigA",
    "score": undefined,
    "start": 3171,
    "strand": 0,
    "subfeatures": [],
    "type": undefined,
    "uniqueId": "test-155217",
  },
  {
    "description": undefined,
    "end": 3183,
    "refName": "contigA",
    "score": undefined,
    "start": 3174,
    "strand": 0,
    "subfeatures": [],
    "type": undefined,
    "uniqueId": "test-155235",
  },
  {
    "description": undefined,
    "end": 3222,
    "refName": "contigA",
    "score": undefined,
    "start": 3213,
    "strand": 0,
    "subfeatures": [],
    "type": undefined,
    "uniqueId": "test-155253",
  },
  {
    "description": undefined,
    "end": 3474,
    "refName": "contigA",
    "score": undefined,
    "start": 3465,
    "strand": 0,
    "subfeatures": [],
    "type": undefined,
    "uniqueId": "test-155271",
  },
  {
    "description": undefined,
    "end": 3804,
    "refName": "contigA",
    "score": undefined,
    "start": 3795,
    "strand": 0,
    "subfeatures": [],
    "type": undefined,
    "uniqueId": "test-155289",
  },
  {
    "description": undefined,
    "end": 4044,
    "refName": "contigA",
    "score": undefined,
    "start": 4035,
    "strand": 0,
    "subfeatures": [],
    "type": undefined,
    "uniqueId": "test-155307",
  },
  {
    "description": undefined,
    "end": 4082,
    "refName": "contigA",
    "score": undefined,
    "start": 4073,
    "strand": 0,
    "subfeatures": [],
    "type": undefined,
    "uniqueId": "test-155325",
  },
]
`;

exports[`adapter can fetch features from volvox-bed12.bed.gz 1`] = `
[
  {
    "description": undefined,
    "end": 9000,
    "itemRgb": "0,0,0",
    "name": "EDEN.1",
    "refName": "ctgA",
    "score": 1000,
    "start": 1049,
    "strand": 1,
    "subfeatures": [
      {
        "end": 1200,
        "parentId": "test-45690",
        "refName": "ctgA",
        "start": 1049,
        "strand": 1,
        "type": "five_prime_UTR",
        "uniqueId": "test-45690-0",
      },
      {
        "end": 1500,
        "parentId": "test-45690",
        "refName": "ctgA",
        "start": 1200,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "test-45690-1",
      },
      {
        "end": 3902,
        "parentId": "test-45690",
        "refName": "ctgA",
        "start": 2999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "test-45690-2",
      },
      {
        "end": 5500,
        "parentId": "test-45690",
        "refName": "ctgA",
        "start": 4999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "test-45690-3",
      },
      {
        "end": 7608,
        "parentId": "test-45690",
        "refName": "ctgA",
        "start": 6999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "test-45690-4",
      },
      {
        "end": 9000,
        "parentId": "test-45690",
        "refName": "ctgA",
        "start": 7608,
        "strand": 1,
        "type": "three_prime_UTR",
        "uniqueId": "test-45690-5",
      },
    ],
    "type": "mRNA",
    "uniqueId": "test-45690",
  },
  {
    "description": undefined,
    "end": 9000,
    "itemRgb": "0,0,0",
    "name": "EDEN.2",
    "refName": "ctgA",
    "score": 1000,
    "start": 1049,
    "strand": 1,
    "subfeatures": [
      {
        "end": 1200,
        "parentId": "test-45787",
        "refName": "ctgA",
        "start": 1049,
        "strand": 1,
        "type": "five_prime_UTR",
        "uniqueId": "test-45787-0",
      },
      {
        "end": 1500,
        "parentId": "test-45787",
        "refName": "ctgA",
        "start": 1200,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "test-45787-1",
      },
      {
        "end": 5500,
        "parentId": "test-45787",
        "refName": "ctgA",
        "start": 4999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "test-45787-2",
      },
      {
        "end": 7608,
        "parentId": "test-45787",
        "refName": "ctgA",
        "start": 6999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "test-45787-3",
      },
      {
        "end": 9000,
        "parentId": "test-45787",
        "refName": "ctgA",
        "start": 7608,
        "strand": 1,
        "type": "three_prime_UTR",
        "uniqueId": "test-45787-4",
      },
    ],
    "type": "mRNA",
    "uniqueId": "test-45787",
  },
  {
    "description": undefined,
    "end": 9000,
    "itemRgb": "0,0,0",
    "name": "EDEN.3",
    "refName": "ctgA",
    "score": 1000,
    "start": 1299,
    "strand": 1,
    "subfeatures": [
      {
        "end": 1500,
        "parentId": "test-45875",
        "refName": "ctgA",
        "start": 1299,
        "strand": 1,
        "type": "five_prime_UTR",
        "uniqueId": "test-45875-0",
      },
      {
        "end": 3300,
        "parentId": "test-45875",
        "refName": "ctgA",
        "start": 2999,
        "strand": 1,
        "type": "five_prime_UTR",
        "uniqueId": "test-45875-1",
      },
      {
        "end": 3902,
        "parentId": "test-45875",
        "refName": "ctgA",
        "start": 3300,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "test-45875-2",
      },
      {
        "end": 5500,
        "parentId": "test-45875",
        "refName": "ctgA",
        "start": 4999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "test-45875-3",
      },
      {
        "end": 7600,
        "parentId": "test-45875",
        "refName": "ctgA",
        "start": 6999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "test-45875-4",
      },
      {
        "end": 9000,
        "parentId": "test-45875",
        "refName": "ctgA",
        "start": 7600,
        "strand": 1,
        "type": "three_prime_UTR",
        "uniqueId": "test-45875-5",
      },
    ],
    "type": "mRNA",
    "uniqueId": "test-45875",
  },
  {
    "description": undefined,
    "end": 23000,
    "itemRgb": "0,0,0",
    "name": "rna-Apple3",
    "refName": "ctgA",
    "score": 1000,
    "start": 17399,
    "strand": 1,
    "subfeatures": [
      {
        "end": 17999,
        "parentId": "test-45972",
        "refName": "ctgA",
        "start": 17399,
        "strand": 1,
        "type": "five_prime_UTR",
        "uniqueId": "test-45972-0",
      },
      {
        "end": 18800,
        "parentId": "test-45972",
        "refName": "ctgA",
        "start": 17999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "test-45972-1",
      },
      {
        "end": 19500,
        "parentId": "test-45972",
        "refName": "ctgA",
        "start": 18999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "test-45972-2",
      },
      {
        "end": 21200,
        "parentId": "test-45972",
        "refName": "ctgA",
        "start": 20999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "test-45972-3",
      },
      {
        "end": 23000,
        "parentId": "test-45972",
        "refName": "ctgA",
        "start": 21200,
        "strand": 1,
        "type": "three_prime_UTR",
        "uniqueId": "test-45972-4",
      },
    ],
    "type": "mRNA",
    "uniqueId": "test-45972",
  },
]
`;

exports[`adapter can use gwas header 1`] = `[]`;
